review blockes enhanced

--- a/index.html
+++ b/index.html
@@ -184,33 +184,52 @@
 <!-- ======================= REVIEWS ======================= -->
 <section id="reviews" class="reviews">
   <h2 class="section-title center">
-    <i class="fas fa-heart"></i> Отзывы учеников
+    <i class="fas fa-comment-dots"></i> Отзывы учеников
   </h2>
 
+  <p class="section-lead">
+    Реальные слова людей, прошедших путь трансформации через голос
+  </p>
+
   <div class="reviews-grid">
-    <div class="review-card">
+    
+    <div class="review-card light">
       <p>
-        «Я пришла за вокалом, а получила внутреннюю опору.
-        Я приняла свой голос и перестала бояться проявляться».
+        Дорогая Рада, хочу выразить огромную благодарность за твои уроки.
+        Я прошла большой путь принятия и веры в себя. Я научилась управлять
+        своим голосом, открыла его новые грани и смогла выразить эмоции
+        через творчество.
       </p>
-      <span>— Жазгуль</span>
+      <span>— ученица курса</span>
     </div>
 
-    <div class="review-card">
+    <div class="review-card light">
       <p>
-        «Процесс был глубоким и бережным.
-        Я научилась слышать себя и звучать свободно».
+        Я пришла за вокалом, а получила намного больше.
+        Проработала страхи, зажимы, установки.
+        Я стала уверенной, раскрепощённой и начала петь.
       </p>
-      <span>— Лаура</span>
+      <span>— выпускница программы</span>
     </div>
 
-    <div class="review-card">
+    <div class="review-card light">
       <p>
-        «Это не просто обучение вокалу.
-        Это трансформация личности и состояния».
+        Это было мягко, глубоко и очень по-душевному.
+        Я приняла свой голос и перестала бояться проявляться
+        и звучать в жизни.
       </p>
-      <span>— Анонимно</span>
+      <span>— участница группы</span>
     </div>
+
+    <div class="review-card light">
+      <p>
+        После занятий я почувствовала внутреннюю опору.
+        Изменения пришли не только в душе, но и в жизни —
+        улучшились отношения и вырос доход.
+      </p>
+      <span>— ученица</span>
+    </div>
+
   </div>
 </section>
 
