added youtube link

--- a/index.html
+++ b/index.html
@@ -132,6 +132,13 @@
             <p class="about-text">Более 2000 учеников по всему миру прошли через обучение под её руководством — от тех, кто никогда не пел, до профессиональных артистов, педагогов, спикеров и терапевтов.</p>
             <p class="about-text">Рада — певица и автор песен, призёр и лауреат международных конкурсов, режиссёр и организатор творческих мероприятий. Продюсер двух музыкальных групп и основатель творческой школы «Касиетті».</p>
             <p class="about-text">Её миссия — раскрывать голос как источник силы, уверенности и самореализации. Голос, который лечит. Голос, который звучит свободно.</p>
+            
+            <a href="https://www.youtube.com/@aubakirovarada"
+               target="_blank"
+               class="youtube-link">
+              <i class="fab fa-youtube"></i>
+              <span>Смотреть YouTube-канал Рады</span>
+            </a>
         </div>
     </div>
 </section>
